<resources>
    <string name="app_name">WaveProjectTools</string>
    <string name="temporary_selinux">Temporary Selinux</string>
    <string name="more">More</string>
    <string name="reboot_system">Reboot</string>
    <string name="warning">Warning</string>
    <string name="reboot_tips">Are you sure reboot system?</string>
    <string name="cancel">Cancel</string>
    <string name="done">Confirm</string>
    <string name="finished">Done!</string>
    <string name="display_battery_health">Battery Health</string>
    <string name="max_mode">Max Mode</string>
    <string name="cashed_apps_freezer">Cached Apps Freezer</string>
    <string name="cashed_apps_freezer_tips">Pause execution of cached apps</string>
    <string name="disable_text">Disable</string>
    <string name="default_text">Default</string>
    <string name="enable_text">Enable</string>
    <string name="null_text">Null</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="kernel_cashed_apps_freezer">Cached Apps Freezer (cgroup v2)</string>
    <string name="kernel_cashed_apps_freezer_tips">Need kernel support</string>
    <string name="about_waveprojecttools">About</string>
    <string name="menu">Menu</string>
    <string name="about_waveprojecttools_tips">About the WaveProjectTools</string>
    <string name="developer">Developer</string>
    <string name="third_party_open_source_statement">Third party open source statement</string>
    <string name="thank_list">Thank list</string>
    <string name="discussions">Discussions</string>
    <string name="issues">Issues</string>
    <string name="issues_url">Click to view Gitub Issues</string>
    <string name="other">Other</string>
    <string name="opensource">OpenSource</string>
    <string name="github_url">Welcome more developers to participate in the development</string>
    <string name="yc">YC Scheduling</string>
    <string name="yc_auto">Auto</string>
    <string name="yc_powersave">Powersave</string>
    <string name="yc_balance">Balance</string>
    <string name="yc_performance">Gaming</string>
    <string name="yc_fast">Fast</string>
    <string name="yc_current_mode">Current Mode</string>
    <string name="yc_get_new_version">Get latest uperf</string>
    <string name="cannot_get_root">Root authorization not obtained!</string>
    <string name="download_magisk">Touch me to download magisk</string>
    <string name="system_updater">System Updater</string>
    <string name="pay_attention">Pay attention!</string>
    <string name="no_coolapk">The Coolapk app is not installed on this machine!</string>
    <string name="no_root">Please use Magisk to get root</string>
    <string name="access_failed">Access failed!</string>
    <string name="device_unsupport">Updates are not yet supported on this device</string>
    <string name="no_internet">Please check for updates when you are online</string>
    <string name="verifying_downloaded_updates">Verifying downloaded updates</string>
    <string name="some_permissions_obtain_failed">Some permissions were obtained successfully, but some permissions were not granted normally</string>
    <string name="permissions_denied_permanently">Authorization denied permanently, please grant storage manually</string>
    <string name="failed_to_get_permissions">Failed to get storage permission</string>
    <string name="already_up_to_date">Already up to date</string>
    <string name="has_update">New version detected</string>
    <string name="local_has_update">Detected locally downloaded update</string>
    <string name="verifying_downloaded_updates_failed">Verifying failed</string>
    <string name="no_module_installed">The extension module is not installed, it has been installed for you, restart to take effect</string>
    <string name="reboot_to_take_effect">Reboot to take effect</string>
    <string name="checking_update">Checking for update</string>
    <string name="check_update">Check update</string>
    <string name="download_update">Download</string>
    <string name="reboot_to_update">Reboot to apply update</string>
    <string name="is_disable">WaveProject module is not in enable</string>
</resources>