<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SystemUpdater">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/miui_version_logo"
            android:layout_width="140dp"
            android:layout_height="147dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/v13_head_image"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/miui_version_text"
            android:layout_width="145dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/v13_text_logo"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="15dp">
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/other_update_logo"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:translationX="15dp"
            app:srcCompat="@drawable/other"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/other_update_text"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:translationX="75dp"
            android:translationY="-32.5dp"
            android:text="@string/other"
            android:textSize="16sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/miui_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="10dp">
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/update_content"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:translationX="35dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/network_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="42dp">
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/text_line"
            android:layout_width="340dp"
            android:layout_height="2dp"
            android:background="@color/text_line"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/checking_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/checking_update"
            android:textSize="17sp"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_bottom"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true">
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/check_update"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-85dp"
            android:onClick="checkUpdate"
            android:text="@string/check_update"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/btn_blue"
            app:layout_constraintBottom_toBottomOf="@+id/btn_bottom" />

        <com.cloud.progressbar.ProgressButton
            android:id="@+id/download_update"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-85dp"
            android:visibility="gone"
            android:text="@string/download_update"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:onClick="downloadUpdate"
            app:cornerRadius="30dp"
            app:progressMargin="2dp"
            app:progressBackColor="#A9A9A9"
            app:progressColor="#FF0D84FF"
            app:buttonColor="#FF0D84FF"/>

        <Button
            android:id="@+id/reboot_to_update"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-85dp"
            android:visibility="gone"
            android:onClick="rebootToUpdate"
            android:text="@string/reboot_to_update"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/btn_blue"
            app:layout_constraintBottom_toBottomOf="@+id/btn_bottom"
            tools:ignore="OnClick" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>